refactor(plazoleta): migrar trazabilidad y eficiencia a puertos SPI
Desacopla la lectura de trazabilidad y el cálculo de eficiencia de PlazoletaService mediante puertos y adapters hexagonales, manteniendo los contratos HU17/HU18 sin cambios.

Made-with: Cursor